# legendary-spork

./: .gitignore  README.md  justfile
.devcontainer/: devcontainer.json  dockerfile
.devcontainer/moonbit/: devcontainer-feature.json  install.sh
.devcontainer/toolchain/: devcontainer-feature.json  install.sh
cli/: README.md  justfile  moon.mod.json
cli/src/: ffi.mbt  moon.pkg.json  stub.mbt
cli/wit/: deps.toml  imports.wit
docs/: exports.html  exports.md  imports.html  imports.md
lib/: CMakeLists.txt  impl.c
wit/: interface.wit  world.wit
